# mLEARn

./: CMakeLists.txt  LICENSE  README.md  install.sh
images/: logo.tif
include/: data_reader.h  data_readers.h  layer.h  layers.h  libutil.h  network.h  networks.h  optimizer.h  optimizers.h  utils.h
papers/: paper.md  ref.bib
src/: data_reader.cpp  data_readers.cpp  layer.cpp  layers.cpp  libutil.cpp  main.cpp  network.cpp  networks.cpp  optimizer.cpp  optimizers.cpp  utils.cpp
tests/: CMakeLists.txt  unit_test_suite.cpp
